tests/negative/neg_pr1113b_match_missing_variant.safe
package neg_pr1113b_match_missing_variant

   type shape is circle (radius : integer) or idle

   function value returns integer

      current : shape = idle
      match current
         when circle (radius)
            return radius
